# Secure-string

./: CMakeLists.txt  README.md
include/allocator/: SecureAllocator.h  SecureMemory.h
include/string/: SecureString.h
src/: main.cpp
src/allocator/: SecureMemory.cpp
src/string/: SecureString.cpp
tests/: CMakeLists.txt
tests/allocator/: test_allocate.cpp  test_deallocate.cpp  test_memzero.cpp  test_rebind.cpp  test_vector.cpp
tests/string/: test_secure_string_comprehensive.cpp  test_string_method.cpp
